--- a/factsplay.yml
+++ b/factsplay.yml
@@ -2,5 +2,6 @@
 - name: print out operating system
   hosts: all
   gather_facts: True
+  #testing the tasks
   tasks:
   - debug: var=ansible_distribution
