--- a/factsplay.yml
+++ b/factsplay.yml
@@ -2,6 +2,6 @@
 - name: print out operating system
   hosts: all
   gather_facts: True
-  #testing the task
+  #testing 
   tasks:
   - debug: var=ansible_distribution
