--- a/test1.yaml
+++ b/test1.yaml
@@ -1,9 +1,15 @@
 ---
   - hosts: all
     tasks:
-    - name: Install httpd Package
-      yum: name=httpd state=latest
-    - name: Copy httpd state=latest
-      copy: src=/static_files/index.html dest=/var/www/html/ mode=0644
-    - name: Start and Enable httpd service
-      service: name=httpd state=restarted enabled=yes
+    - name: pv create
+      command: pvcreate /dev/sdb
+    - name: vg create
+      command: hd_new /dev/sdb
+    - name: logical volume create!
+      command: lvcreate -n lv_data1 --size 2G hd_new
+    - name: format the newly added disk
+      command: mkfs.xfs /dev/hd_new/lv_data1
+    - name: make directory for mounting volume
+      command: mkdir /tmp/new_data
+    - name: mounting now
+      command: mount /dev/hd_new/lv_data1 /tmp/new_data
